# astal-niri-dock

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  README.md  config.json  package.json  tsconfig.json
qml/: Main.qml
scripts/: check.sh  debug.sh  start.sh  stop.sh  verify-migration.py  verify-runtime.sh
src/: app-info.ts  app.tsx  config.ts  niri.ts  style.css
src-qt/: desktopappdatabase.cpp  desktopappdatabase.h  dockcontroller.cpp  dockcontroller.h  layershellbridge.cpp  layershellbridge.h  main.cpp  themeiconprovider.cpp  themeiconprovider.h
